Agrage funcionalidad para el NTP.
* levantar ntp solo si un ping al ip devuelve ok, cambiar hora desde web_kairos
* mostrar ntp status en pantalla

--- a/FIRMWARE/bin/www/web_kairos.html
+++ b/FIRMWARE/bin/www/web_kairos.html
@@ -98,12 +98,12 @@ body {
   <tr>
     <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
   </tr>
-  <!-- <tr> -->
-  <!--   <td class="Estilo6"><strong><a href="/cgi-bin/setTime.sh">Modificar Fecha y Hora </a></strong></td> -->
-  <!-- </tr> -->
-  <!-- <tr> -->
-  <!--   <td bgcolor="#5EBB49" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td> -->
-  <!-- </tr> -->
+  <tr>
+    <td class="Estilo6"><strong><a href="/cgi-bin/setTime.sh">Modificar Fecha y Hora </a></strong></td>
+  </tr>
+  <tr>
+    <td bgcolor="#5EBB49" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
+  </tr>
   <tr>
     <td class="Estilo6"><strong><a href="/cgi-bin/setWSURL.sh">Modificar IP y Puerto Web Service de ALTAS y EVENTOS</a></strong></td>
   </tr>
