cambios en web_kairos

--- a/FIRMWARE/bin/www/web_kairos.html
+++ b/FIRMWARE/bin/www/web_kairos.html
@@ -93,7 +93,7 @@ body {
     <td bgcolor="#5EBD49" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
   </tr>
   <tr>
-    <td class="Estilo6"><strong><a href="/cgi-bin/getDate">Consultar Fecha y Hora </a></strong></td>
+    <td class="Estilo6"><strong><a href="/cgi-bin/getDate.sh">Consultar Fecha y Hora </a></strong></td>
   </tr>
   <tr>
     <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
