Cambio para el NTP

--- a/FIRMWARE/bin/www/web_kairos.html
+++ b/FIRMWARE/bin/www/web_kairos.html
@@ -128,7 +128,14 @@ body {
   <tr>
     <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
   </tr>
+  <tr>
+    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/viewInfo.sh">Informaci&oacute;n del Equipo</a></span></td>
+  </tr>
+  <tr>
+    <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
+  </tr>
 </table>
 <br />
+
 </body>
 </html>
