Modificaciones para NTP y epigenesis, nos libramos del ping al IP del NTP.

--- a/FIRMWARE/bin/www/web_kairos.html
+++ b/FIRMWARE/bin/www/web_kairos.html
@@ -61,6 +61,18 @@ body {
   <tr>
     <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
   </tr>
+  <tr>
+    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/setNTPIP.sh">NTP</a></span></td>
+  </tr>
+  <tr>
+    <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
+  </tr>
+  <tr>
+    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/getEnvVar.sh">Sistema</a></span></td>
+  </tr>
+  <tr>
+    <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
+  </tr>
   <!-- <tr> -->
   <!--   <td class="Estilo6"><strong><a href="/cgi-bin/setOperationMode.sh">Modificar MODO OPERACION</a></strong></td> -->
   <!-- </tr> -->
@@ -68,12 +80,12 @@ body {
 	<!-- <tr> -->
   <!--   <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td> -->
   <!-- </tr> -->
-  <tr>
-    <td class="Estilo6"><strong><a href="/cgi-bin/getIPAddress">Consultar Interfaz de Red</a></strong></td>
-  </tr>
-  <tr>
-    <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
-  </tr>
+  <!-- <tr> -->
+  <!--   <td class="Estilo6"><strong><a href="/cgi-bin/getIPAddress">Consultar Interfaz de Red</a></strong></td> -->
+  <!-- </tr> -->
+  <!-- <tr> -->
+  <!--   <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td> -->
+  <!-- </tr> -->
   <tr>
     <td class="Estilo6"><strong><a href="/cgi-bin/setNetInterface.sh">Modificar Interfaz de Red</a></strong></td>
   </tr>
@@ -111,25 +123,13 @@ body {
     <td bgcolor="#5EBB49" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
   </tr>
   <tr>
-    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/getEnvVar">Consultar Variables de Entorno </a></span></td>
-  </tr>
-  <tr>
-    <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
-  </tr>
-  <tr>
-    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/Reset_Device.sh">RESETEAR DISPOSITIVO</a></span></td>
-  </tr>
-  <tr>
-    <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
-  </tr>
-  <tr>
     <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/view_events.sh">Ver Eventos</a></span></td>
   </tr>
   <tr>
     <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
   </tr>
   <tr>
-    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/viewInfo.sh">Informaci&oacute;n del Equipo</a></span></td>
+    <td class="Estilo6"><span class="Estilo10"><a href="/cgi-bin/Reset_Device.sh">RESETEAR DISPOSITIVO</a></span></td>
   </tr>
   <tr>
     <td bgcolor="#5EBB48" class="Estilo6"><img src="pixel.png" width="1" height="1" /></td>
